Bug 146933 - Keypress events attached to table control columns in Base no longer responded to (steps in comment 4)
Summary: Keypress events attached to table control columns in Base no longer responded...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.0.0.beta2 tar...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-01-23 10:23 UTC by PhilipK
Modified: 2023-01-24 10:36 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample file with form and macros to illustrate responses (17.37 KB, application/vnd.oasis.opendocument.database)
2022-01-23 10:26 UTC, PhilipK
Details

Note You need to log in before you can comment on or make changes to this bug.
Description PhilipK 2022-01-23 10:23:41 UTC
Description:
When a form contains a table grid, it was possible with LO 7.0.6.2 to attach Keypress events to individual columns. These events are no longed picked up in versions 7.1.8 or 7.2.5.2. Keypress events attached to the table grid still work, but it is mostly desirable to attach them to one or other specific column. On the other hand, mouse double-clicks (seen by the MouseButtonPressed event) are recognised at both the table and column level.

Actual Results:
See the attached sample, which has macros attached to both the 'Key pressed' and 'Mouse button pressed' events for each column in the table-grid on the form.

Expected Results:
As in the case of the 'free-standing' textbox on the right, the typing of any key in a column of the table should invoke a message box defining what has been pressed.


Reproducible: Always


User Profile Reset: No



Additional Info:
None
Comment 1 PhilipK 2022-01-23 10:26:48 UTC
Created attachment 177721 [details]
Sample file with form and macros to illustrate responses
Comment 2 Buovjaga 2022-12-08 12:36:03 UTC
I tried with the oldest of 7.0 bibisect repo and nothing happens upon keypresses anywhere when viewing the table. Can you please give exact steps? And how can I view the bound events?

Arch Linux 64-bit
Version: 7.4.3.2 / LibreOffice Community
Build ID: 40(Build:2)
CPU threads: 8; OS: Linux 6.0; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
7.4.3-1
Calc: threaded

Set to NEEDINFO.
Change back to UNCONFIRMED after you have provided the information.
Comment 3 PhilipK 2022-12-09 12:33:55 UTC
If this query is directed to me, I am afraid I cannot help, beyond the information supplied in the sample database.
If you edit the form, you will see which events are linked to which controls; if you edit the macros, you will find the bound code.
Comment 4 Buovjaga 2022-12-17 12:30:06 UTC
Ok, now I got it. The regression affects column 2. The multi-line column 1 does not react even in versions 6.3, 6.4 or 7.0.

Bibisected with linux-64-7.1 to https://git.libreoffice.org/core/commit/d2f1cd004310b9ea6654d17fddc11cb08e884c90
weld EditControl for browsebox

New steps:

1. Open attachment 177721 [details]
2. Double-click TBL form
3. Focus into a cell in column 2 and start typing

An alert should pop up on each key press (or mouse double-click etc.)
Comment 5 Commit Notification 2022-12-19 20:34:46 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ee767c14530ad1fb8b7660e9352199f185fe61dc

Resolves: tdf#146933 wire up keypress events for table control widgets

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2022-12-19 20:50:35 UTC
done in trunk, backport to 7-5 in gerrit
Comment 7 Commit Notification 2022-12-20 08:23:08 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/f49ffc2ca908712831d9b7b3432b053728e541e0

Resolves: tdf#146933 wire up keypress events for table control widgets

It will be available in 7.5.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2022-12-20 08:51:23 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/7a770a8fb7628288aaaee868331c01f39afb5b71

Resolves: tdf#146933 wire up keypress events for table control widgets

It will be available in 7.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Xisco Faulí 2023-01-24 10:36:21 UTC
7.4.5 was a hotfix release, updating target in status-whiteboard